assets/css/app.css
@font-face {
    font-family: 'Berlingske Serif';
    src: url('../fonts/berlingske-serif-regular.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Berlingske Serif Bold';
    src: url('../fonts/berlingske-serif-bold.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Berlingske Serif Italic';
    src: url('../fonts/berlingske-serif-italic.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Lovely Day';
    src: url('../fonts/lovely-day.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
}

body {
    font-family: 'Berlingske Serif Italic';
    font-size: 18px;
    color: #3f3f3f;
    background-image: url("../img/pattern.png");
    background-repeat: repeat;
    background-color: #fafafa;
}

.container {
  background-color: white;
  background-position-x: 30%;
  background-position-y: -490px;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-image: url("../img/flower-top.jpg");
  background-size: 1170px auto;
  background-origin: padding-box;
  background-clip: border-box;
  box-shadow: 0px 5px 15px 3px rgba(0,0,0,0.2);
}

@media (min-width: 390px) {
  .container {
    background-position-x: 25%;
  }
}

@media (min-width: 550px) {
  .container {
    background-position-x: 20%;
  }
}

@media (min-width: 650px) {
  .container {
    background-position-x: 10%;
  }
}

@media (min-width: 778px) {
  .container {
    margin-top: 2px;
    margin-bottom: 5px;
  }
}

@media (min-width: 788px) {
  .container {
    margin-top: 7px;
    margin-bottom: 10px;
  }
}

@media (min-width: 798px) {
  .container {
    margin-bottom: 15px;
  }
}

@media (min-width: 992px) {
  .container {
    background-position-x: 0px;
    background-position-y: -640px;
    background-size: 1380px auto;
  }
}

@media (min-width: 1200px) {
  .container {
    background-position-x: 0px;
    background-position-y: -750px;
    background-size: 1580px auto;
  }
}

a, a:focus, a:active, a:hover {
  text-decoration: none;
}

.jumbotron {
  padding-top: 65px;
  background: transparent;
  text-align: center;
  padding-bottom: 0px;
}

.jumbotron.title {
  padding-top: 0px;
}

.jumbotron.title h1 {
  margin-top: 5px;
  font-size: 45px;
  line-height: 95px;
}

.jumbotron.title h1 .andviana {
  font-size: 22px;
  line-height: 20px;
}

.jumbotron.title h1 .andviana .aviana {
  display: none;
}

@media only screen
and (min-device-width: 375px)
and (max-device-width: 667px)
and (orientation: landscape) {
  .jumbotron.title h1 .andviana .and {
    display: none;
  }

  .jumbotron.title h1 .andviana .aviana {
    display: block;
  }
}

@media only screen
and (min-device-width: 320px)
and (max-device-width: 568px)
and (orientation: landscape) {
  .jumbotron.title h1 .andviana .and {
    display: none;
  }

  .jumbotron.title h1 .andviana .aviana {
    display: block;
  }
}

@media only screen
and (min-device-width: 375px)
and (max-device-width: 812px)
and (-webkit-device-pixel-ratio: 3)
and (orientation: landscape) {
  .jumbotron.title h1 .andviana .and {
    display: none;
  }

  .jumbotron.title h1 .andviana .aviana {
    display: block;
  }
}

.jumbotron h2 {
  font-size: 37px;
  line-height: 80px;
  padding: 15px 0;
}

hr {
  margin-top: 80px;
  margin-left: -15px;
  margin-right: -15px;
  padding-left: 15px;
  padding-right: 15px;
}

p.subtitle {
  font-family: 'Berlingske Serif';
  text-transform: uppercase;
  color: #5b8b7e;
  text-align: center;
  letter-spacing: 2px;
  font-size: 16px;
}

@media (min-width: 667px) {
  p.subtitle {
    padding: 0px 100px;
  }
}

@media (min-width: 768px) {
  p.subtitle {
    padding: 0px 150px;
  }
}

@media (min-width: 992px) {
  p.subtitle {
    padding: 0px;
  }
}

p.subtitle a {
  color: #5b8b7e;
}

p.subtitle a span {
  font-size: 30px;
}

p.together {
  padding-top: 200px;
}

h1, h2 {
  font-family: 'Lovely Day';
  line-height: normal;
}

.rsvp-container {
  margin-left: -15px;
  margin-right: -15px;
  padding-left: 15px;
  padding-right: 15px;
  margin-top: -20px;
  padding-bottom: 80px;
}

hr.rsvp-hr {
  margin-top: 0px;
}

@media (min-width: 667px) {
  .rsvp-container {
    background-color: transparent;
    background-position-x: 20px;
    background-position-y: -70px;
    background-repeat: no-repeat;
    background-attachment: scroll;
    background-image: url("../img/flower-right.jpg");
    background-size: 1250px auto;
    background-origin: padding-box;
    background-clip: border-box;
  }
}

@media (min-width: 768px) {
  .rsvp-container {
    background-size: 1260px auto;
  }
}

@media (min-width: 992px) {
  .rsvp-container {
    background-size: 1270px auto;
  }
}

@media (min-width: 1200px) {
  .rsvp-container {
    background-size: 1300px auto;
  }
}

@media (min-width: 768px) {

  .entourage h3.bible-title, .entourage ul.bible {
    margin-top: 20px;
    padding-top: 35px;
    padding-bottom: 7px;
    margin-bottom: 5px;
  }

  .entourage h3.ring-title, .entourage h3.arrhae-title, .entourage h3.flower-title,
  .entourage ul.ring, .entourage ul.arrhae {
    margin-top: 10px;
    padding-top: 17px;
    padding-bottom: 7px;
    margin-bottom: 5px;
  }

  .entourage ul.flower {
    margin-top: 10px;
    padding-top: 17px;
    padding-bottom: 7px;
    margin-bottom: 5px;
  }
}

@media (min-width: 992px) {
  .entourage .row {
    padding: 0px 120px;
  }
}

@media (min-width: 1200px) {
  .entourage .row {
    padding: 0px 240px;
  }
}

ul {
  list-style: none;
  padding-left: 0px;
}

ul.ceremony {
  margin-top: 25px;
  margin-bottom: 5px;
  font-family: 'Berlingske Serif';
  color: #5b8b7e;
}

ul.ceremony.first {
  margin-top: 0px;
}

ul.secondary {
  margin-bottom: 0px;
}

@media (min-width: 768px) {
  ul.ceremony {
    margin-top: 0px;
    margin-bottom: 0px;
  }
}

ul li {
  text-align: center;
}

p {
  text-align: center;
}

h3 {
  text-align: center;
  font-family: 'Berlingske Serif Bold';
  text-transform: uppercase;
  color: #5b8b7e;
  padding-bottom: 15px;
  padding-top: 35px;
  font-size: 19px;
}

h3.forward {
  font-family: 'Berlingske Serif';
  letter-spacing: 2px;
}

h3.rsvp {
  letter-spacing: 2px;
}

p.adults {
  letter-spacing: 1px;
}

p.facebook a {
  color: #5b8b7e;
  font-family: 'Berlingske Serif';
  letter-spacing: 2px;
  text-transform: uppercase;
}

p.facebook a span {
  font-size: 23px;
}

.row.wear {
  letter-spacing: 1px;
}

.wear span.dusty {
  color: #b77b82;
  text-shadow: 0px 0px 5px rgba(183, 123, 130, 0.4);
}

.wear span.mauve {
  color: #b784a7;
  text-shadow: 0px 0px 5px rgba(183, 132, 167, 0.4);
}

h3.no-dark {
  font-family: 'Berlingske Serif';
  letter-spacing: 2px;
}

.row.registry {
  padding-bottom: 200px;

  background-color: transparent;
  background-position-x: 25%;
  background-position-y: 90%;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-image: url("../img/flower-bot.jpg");
  background-size: 1170px auto;
  background-origin: padding-box;
  background-clip: border-box;
}

@media (min-width: 1200px) {
  .row.registry {
    background-position-x: 0%;
    background-position-y: 93%;
    background-size: 1250px auto;
  }
}

.row.registry h3 {
  text-align: center;
  line-height: 30px;
  font-size: 20px;
  padding-bottom: 40px;
}

.row.registry p {
  font-size: 17px;
  text-align: left;
  line-height: 29px;
}

@media (min-width: 410px) {
  .row.registry p {
    text-align: center;
  }
}

@media (min-width: 420px) {
  .row.registry p {
    font-size: 18px;
  }
}

.row.registry p.visit {
  text-align: center;
}

p.visit span.account {
  font-family: 'Berlingske Serif';
  color: #5b8b7e;
  font-size: 19px;
}

